# CppMSCKF

./: CMakeLists.txt  README.md
cmake/: MSCKFConfig.cmake.in  arm-none-eabi.cmake
include/: msckf_estimator.hpp  msckf_extended.hpp
include/audit/: final_audit_report.hpp  system_documentation.hpp
include/collaborative/: collaborative_msckf.hpp
include/core/: adaptive_kernel.hpp  consistency_checker.hpp  extreme_scenario_handler.hpp  imu_propagator.hpp  incremental_schur.hpp  lstm_predictor.hpp  marginalizer.hpp  safety_guard.hpp  state.hpp  visual_updater.hpp
include/hal/: camera_hal.hpp  camera_types.hpp  imu_hal.hpp  imu_types.hpp  power_management.hpp
include/math/: fixed_point.hpp  lie.hpp  matrix.hpp  numerical_stability.hpp  quaternion.hpp  types.hpp
include/semantic/: semantic_msckf.hpp
include/system/: code_optimization.hpp  communication.hpp  fault_injection.hpp  lockfree_queue.hpp  memory_pool.hpp  memory_safety.hpp  performance_monitor.hpp  scheduler.hpp
include/utility/: auto_tuning.hpp  battery_manager.hpp  black_box.hpp  magnetic_rejection.hpp  return_to_home.hpp  zero_velocity_update.hpp
include/vision/: corner_detector.hpp  image_processing.hpp  klt_tracker.hpp  multi_camera.hpp
tests/: CMakeLists.txt  main.cpp  test_adaptive_kernel.hpp  test_extreme_scenario.hpp  test_framework.hpp  test_imu_propagator.hpp  test_lockfree.hpp  test_main.hpp  test_marginalizer.hpp  test_math.hpp  test_memory_pool.hpp  test_numerical_stability.hpp  test_safety.hpp  test_state.hpp  test_visual_updater.hpp
